# aider-lite

./: .dockerignore  .gitignore  Dockerfile  README.md  docker.sh  pyproject.toml  requirements.txt
aider/: args.py  args_formatter.py  commands.py  format_settings.py  llm.py  main.py  models.py  repomap.py  report.py  run_cmd.py  sendchat.py
aider/coders/: base_coder.py  diff_match_patch.py  search_replace.py
aider_lite/: __init__.py  args.py  args_formatter.py  commands.py  exceptions.py  history.py  io.py  linter.py  llm.py  main.py  mdstream.py  models.py  repo.py  sendchat.py  urls.py  utils.py
aider_lite/coders/: architect_coder.py  base_coder.py  chat_chunks.py  editblock_coder.py  help_coder.py  help_prompts.py  search_replace.py  single_wholefile_func_coder.py  wholefile_coder.py  wholefile_func_coder.py
aider_lite/lsp/: __init__.py  client.py  types.py
aider_lite/resources/: __init__.py  model-metadata.json
tests/basic/: test_coder.py  test_commands.py  test_editblock.py  test_exceptions.py  test_find_or_blocks.py  test_history.py  test_io.py  test_linter.py  test_main.py  test_models.py  test_repo.py  test_run_cmd.py  test_sanity_check_repo.py  test_scripting.py  test_sendchat.py  test_special.py  test_udiff.py  test_urls.py  test_wholefile.py
